cabal-version:       2.4
name:                credit-card
version:             0.1.0.0
synopsis: Credit card validation
license-file:        LICENSE
build-type:          Simple

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.CreditCard
  build-depends:       base
                     , QuickCheck
                     , aeson
                     , aeson-inflections >= 0.1
                     , digit
                     , formatting
                     , lens
                     , openapi3
                     , text
                     , time
  if !impl(ghcjs)
    build-depends:     postgresql-simple
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                     , DeriveGeneric
                     , ScopedTypeVariables
                     , TypeApplications
                     , ViewPatterns

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , credit-card
                     , hspec
                     , text
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       CreditCardSpec
  default-extensions:  ScopedTypeVariables
                     , OverloadedStrings
