cabal-version:       2.4
name:                credit-card
version:             0.1.0.0
synopsis: Credit card validation
license-file:        LICENSE
build-type:          Simple

Flag store
  Description: Enable Data.Store serialization support
  Default:     False
  Manual:      False

Flag postgres
  Description: Enable Postgresql support
  Default:     True
  Manual:      False

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.CreditCard
  build-depends:       base
                     , QuickCheck
                     , aeson
                     , aeson-inflections >= 0.1
                     , digit
                     , formatting
                     , lens
                     , openapi3
                     , text
                     , time
  if !impl(ghcjs) && flag(postgres)
    build-depends:     postgresql-simple
    cpp-options: -DUSE_POSTGRES
  if flag(store)
    build-depends:
      store
    cpp-options: -DUSE_STORE
    default-extensions: DeriveAnyClass
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                     , DeriveGeneric
                     , ScopedTypeVariables
                     , TypeApplications
                     , ViewPatterns

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , credit-card
                     , hspec
                     , text
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       CreditCardSpec
  default-extensions:  ScopedTypeVariables
                     , OverloadedStrings
